Setup hooks to create users

--- a/deploy/mariadb/templates/clusterrole.yaml
+++ b/deploy/mariadb/templates/clusterrole.yaml
@@ -10,5 +10,5 @@ rules:
     resources: ["pods"]
     verbs: ["get", "watch", "list"]
   - apiGroups: ["k8s.sebatec.eu"]
-    resources: ["databases"]
+    resources: ["databases", "users"]
     verbs: ["get", "watch", "list"]
