Create config map based on user resource

--- a/deploy/mariadb/templates/cdr/user.yaml
+++ b/deploy/mariadb/templates/cdr/user.yaml
@@ -27,6 +27,16 @@ spec:
                     siteCounter:
                       type: number
                       minimum: 1
+                configMaps:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                      namespace:
+                        type: string
+                    required: ["name"]
   scope: Namespaced
   names:
     plural: users
