--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,6 @@
 FROM ghcr.io/seb-schulz/mariadb-operator:latest
 
-RUN apk add --no-cache curl && \
+RUN apk add --no-cache curl bind-tools && \
     curl -Lk 'https://code.visualstudio.com/sha/download?build=stable&os=cli-alpine-x64' --output vscode_cli.tar.gz && \
     tar -xf vscode_cli.tar.gz && rm vscode_cli.tar.gz
 
