--- a/deploy/mariadb/templates/clusterrolebinding.yaml
+++ b/deploy/mariadb/templates/clusterrolebinding.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "mariadb.ClusterRoleBindingName" . }}
+  name: {{ include "mariadb.clusterRoleBindingName" . }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "mariadb.labels" . | nindent 4 }}
