Fix environment variable of deployment in helm chart

--- a/deploy/mariadb/templates/deployment.yaml
+++ b/deploy/mariadb/templates/deployment.yaml
@@ -35,8 +35,8 @@ spec:
           image: {{ include "mariadb.image" (list . $appVersion) | quote }}
           imagePullPolicy: {{ .image.pullPolicy }}
           env:
-            name: MARIADB_SERVICE_DOMAIN
-            value: {{ include "mariadb.serviceDomain" $ }}
+            - name: MARIADB_SERVICE_DOMAIN
+              value: {{ include "mariadb.serviceDomain" $ }}
           envFrom:
             - secretRef:
                 name: {{ include "mariadb.secretName" $ }}
