--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile
 #
+behave==1.2.6
+    # via -r requirements.in
 cachetools==5.3.1
     # via google-auth
 certifi==2023.7.22
@@ -24,6 +26,12 @@ oauthlib==3.2.2
     # via
     #   kubernetes
     #   requests-oauthlib
+parse==1.19.1
+    # via
+    #   behave
+    #   parse-type
+parse-type==0.6.2
+    # via behave
 protobuf==4.21.12
     # via mysql-connector-python
 pyasn1==0.5.0
@@ -46,7 +54,9 @@ rsa==4.9
     # via google-auth
 six==1.16.0
     # via
+    #   behave
     #   kubernetes
+    #   parse-type
     #   python-dateutil
 urllib3==1.26.17
     # via
