--- a/deploy/mariadb/templates/deployment.yaml
+++ b/deploy/mariadb/templates/deployment.yaml
@@ -7,6 +7,8 @@ metadata:
     {{- include "mariadb.labels" . | nindent 4 }}
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       {{- include "mariadb.selectorLabels" . | nindent 6 }}
