--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,5 +37,7 @@ jobs:
         uses: helm/chart-releaser-action@v1.5.0
         with:
           charts_dir: deploy
+          pages_branch: gh-pages
+          packages_with_index: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
