--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,10 +34,8 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com"
       - name: Helm Chart Releaser
-        uses: helm/chart-releaser-action@v1.5.0
+        uses: ./.github/actions/chart-releaser-action
         with:
           charts_dir: deploy
-          pages_branch: gh-pages
-          packages_with_index: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
